// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense total correctly 1`] = `
<div>
  <h2>
    Viewing 
    1
     expense 
    totalling 
    $100.00
  </h2>
</div>
`;

exports[`should render multiple expenses total correctly 1`] = `
<div>
  <h2>
    Viewing 
    3
     expenses 
    totalling 
    $2,384,298.34
  </h2>
</div>
`;
